syntax = "proto3";

package orders;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
}

message CreateOrderRequest {
  string product_id = 1;
  int32 quantity = 2;
  string user_id = 3;
}

message OrderData {
  string order_id = 1;
  string status = 2;
  string message = 3;
}

message CreateOrderResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  OrderData data = 4;
}

message GetOrderRequest {
  string order_id = 1;
}

message OrderDetails {
  string order_id = 1;
  string status = 2;
  string product_id = 3;
  int32 quantity = 4;
  string user_id = 5;
}

message GetOrderResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  OrderDetails data = 4;
}
